infra/client-depl.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: ms-client-depl
  labels:
    app: client

spec:
  replicas: 1

  selector:
    matchLabels:
      app: client

  template:
    metadata:
      labels:
        app: client

    spec:
      containers:
        - name: client
          image: microservices-client
          imagePullPolicy: Never
          ports:
            - containerPort: 80

---

apiVersion: v1

kind: Service

metadata:
  name: ms-client-srv

spec:
  selector:
    app: client

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80

  type: ClusterIP
