infra/comments-depl.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: ms-comments-dpl

spec:
  replicas: 1

  selector:
    matchLabels:
      app: comments

  template:

    metadata:
      labels:
        app: comments

    spec:
      containers:
        - name: comments-container
          image: ms-comments
          imagePullPolicy: Never
          ports:
            - containerPort: 4001

---

apiVersion: v1

kind: Service

metadata:
  name: ms-comments-srv

spec:
  selector:
    app: comments

  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001

  type: ClusterIP
