infra/event-bus-depl.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: ms-event-bus-depl # nom du déploiement
spec:
  replicas: 1 # nombre de réplicas pour ce déploiement

  selector:
    matchLabels:
      app: event-bus # doit correspondre au label du template ci-dessous

  template:
    metadata:
      labels:
        app: event-bus # label utilisé pour sélectionner les pods

    spec:
      containers:
      - name: event-bus
        image: microservices-event-bus
        imagePullPolicy: Never
        ports:
        - containerPort: 4005 # port exposé par le conteneur

---

apiVersion: v1

kind: Service

metadata:
  name: ms-event-bus-srv # nom du service

spec:
  selector:
    app: event-bus # sélectionne les pods ayant ce label

  ports:
    - protocol: TCP # protocole utilisé
      port: 4005 # port exposé par le service
      targetPort: 4005 # port de ma machine locale

  type: ClusterIP # type de service par défaut pour une communication interne
