infra/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation-container
          image: ms-moderation
          imagePullPolicy: Never
          ports:
            - containerPort: 4003

---

apiVersion: v1
kind: Service
metadata:
  name: ms-moderation-srv
spec:
  selector:
    app: moderation
  ports:
    - protocol: TCP
      port: 4003
      targetPort: 4003
  type: ClusterIP
