infra/posts-depl.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: ms-posts-dpl

spec:
  replicas: 1

  selector:
    matchLabels:
      app: posts

  template:

    metadata:
      labels:
        app: posts

    spec:
      containers:
        - name: posts-container
          image: ms-posts
          imagePullPolicy: Never
          ports:
            - containerPort: 4000

---

apiVersion: v1

kind: Service

metadata:
  name: ms-posts-srv

spec:
  selector:
    app: posts

  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000

  type: ClusterIP
